samples/_failures_safe/1761534484_f7c537_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a536035.c: In function ‘main’:
./samples/SAFE/__tmp_2a536035.c:170:32: error: expected ‘;’ at end of input
  170 |     input[strcspn(input, "\n")]
      |                                ^
      |                                ;
./samples/SAFE/__tmp_2a536035.c:170:5: error: expected declaration or statement at end of input
  170 |     input[strcspn(input, "\n")]
      |     ^~~~~
